Changelog
=========

0.14.1 -
-------------------

- UX speed improvements.
  [ggozad]

0.14.0 - 2025-06-12
-------------------

- Support for bearer authentication for MCP servers.
  [ggozad]

- Support Streamable HTTP MCP servers. Drop support for SSE.
  [ggozad]

- Remove `completion` method, we now stream only.
  [ggozad]

- Postpone sixel detection to avoid spurious characters in terminals
  that do not support sixel.
  [ggozad]

- oterm in homebrew/core.
  [ggozad]

0.13.1 - 2025-06-03
-------------------

- Use "thinking" mode for models that support it.
  [ggozad]

- Detect and show model capabilities in Edit Chat screen.
  [ggozad]

0.13.0 - 2025-05-30
-------------------

- Streaming support while using tools.
  [ggozad]

0.12.1 - 2025-05-21
-------------------

- Dependencies update.
  [ggozad]

0.12.0 - 2025-05-11
-------------------

- Move as much as possible to pydantic, simplify code.
  [ggozad]

- Remove commands, little feedback seems noone is using it.
  [ggozad]

- When regenerating a message default to chat completion as tools do not work when streaming.
  [ggozad]

- When editing a chat filter out tools that are no longer available.
  [ggozad]

0.11.2 - 2025-04-22
-------------------

- Support for SSE & WS MCP transports.
  [ggozad]

0.11.1 - 2025-04-17
-------------------

- Fix error with prompts not submitting if they have no fields.
  [ggozad]

- Group tools by MCP server.
  [ggozad]

0.11.0 - 2025-04-13
-------------------

- MCP Sampling support.
  [ggozad]

0.10.3 - 2025-04-13
-------------------

- Built-in log viewer.
  [ggozad]

0.10.2 - 2025-04-12
-------------------

- Improve and release textualeffects for faster splash screen.
  [ggozad]

- Faster boot by performing version & ollama checks in parallel.
  [ggozad]

- Documentation for development & debugging.
  [ggozad]

0.10.1 - 2025-04-09
-------------------

- More stability handling MCP servers.
  [ggozad]
- Add pre-commit hooks and fix linting errors.
  [ggozad]