@@ -1,10 +1,10 @@
 import asyncio
+import os
 import sys
 from collections.abc import Callable
 from functools import wraps
 from importlib import metadata
 from pathlib import Path
-import os
 
 import httpx
 from packaging.version import Version, parse
@@ -118,8 +118,12 @@ def get_default_data_dir() -> Path:
 
     system_paths = {
         "win32": home / "AppData/Roaming/oterm",
-        "linux": Path(os.getenv("XDG_DATA_HOME") or os.path.expanduser("~/.local/share")) / "oterm",
-        "darwin": Path(os.getenv("XDG_DATA_HOME") or os.path.expanduser("~/Library/Application Support")) / "oterm",
+        "linux": Path(os.getenv("XDG_DATA_HOME") or Path(home / ".local/share"))
+        / "oterm",
+        "darwin": Path(
+            os.getenv("XDG_DATA_HOME") or Path(home / "Library/Application Support")
+        )
+        / "oterm",
     }
 
     data_path = system_paths[sys.platform]
